added write to memory

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /LearningRPMWPM/.vs/LearningRPMWPM/v16/Browse.VC.db-shm
+/LearningRPMWPM/.vs/LearningRPMWPM/v16/Browse.VC.db-wal
+/LearningRPMWPM/.vs/LearningRPMWPM/v16/Browse.VC.opendb
+/LearningRPMWPM/.vs/LearningRPMWPM/v16/Solution.VC.db-shm
+/LearningRPMWPM/.vs/LearningRPMWPM/v16/Solution.VC.db-wal
