--- a/LearningRPMWPMUser/LearningRPMWPMUser.vcxproj
+++ b/LearningRPMWPMUser/LearningRPMWPMUser.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="GlowStructure.hpp" />
     <ClInclude Include="memory.hpp" />
     <ClInclude Include="offsets.hpp" />
+    <ClInclude Include="Source.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
