--- a/LearningRPMWPMUser/LearningRPMWPMUser.vcxproj.filters
+++ b/LearningRPMWPMUser/LearningRPMWPMUser.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="GlowStructure.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
