fixed glow and some changes

--- a/LearningRPMWPMUser/LearningRPMWPMUser.vcxproj
+++ b/LearningRPMWPMUser/LearningRPMWPMUser.vcxproj
@@ -132,18 +132,16 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <BufferSecurityCheck>false</BufferSecurityCheck>
+      <BufferSecurityCheck>true</BufferSecurityCheck>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalOptions>/INTEGRITYCHECK %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cheat.cpp" />
     <ClCompile Include="driver_interface.cpp" />
     <ClCompile Include="memory.cpp" />
     <ClCompile Include="Source.cpp" />
